updated sql scripts for postgres